--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,56 @@
+body{
+  background-color: green;
+}
+
 header {
   text-align: center;
   background-color: green;
+}
+body{
+  background-image:url("../images/sky-background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;}
+#background-header{background-image: url("../images/image-sky-background2.jpeg");
+	background-size:cover;
+	height:300px;
+	height: 350px;}
+.jubmbo-section-text{color: white;
+					text-align: center;}
+#form-section{text-align: center;
+				color: white;}
+#myform-item1{width:200px;
+			height: 40px;
+			vertical-align: middle;
+			}
+							color: white;}
+#myform-item2{width:200px;
+			height: 40px;
+			vertical-align: middle;
+			}
+#modal-section{
+	position: relative;
+  top:30px;
+  left: 400px;
+
+}
+#modal-button{
+	height: 30px;
+	width: 200px;
+}
+#x-button{
+	margin-top: 10px;
+  margin-right: 15px;
+}
+#modal-color{
+	background-color: rgb(0, 128, 255);
+}
+#header-style{text-align: center;}
+#modal-para{
+	color: white;
+	text-align: center;
+}
+#github-link{
+	font-famly: Courier, monospace;
+	color:black;
+
 }
